[IMP] Creation webpage

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Test</title>
-    </head>
-    <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Acceuil</title>
+    <link href="https://bootswatch.com/5/superhero/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <img src="../static/img/logo.png" alt="logo" class="logo">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+    </nav>
+    <table style="background-color: blanchedalmond; color: black; border-radius: 10px; margin-left: 10%;margin-top: 5%;">
+        <thead>
+            <tr>
+                <th class="col-8">Identifiant</th>
+                <th class="col-4">Fiche Contact</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th><a href="http://google.fr">TEST</a></th>
+                <td>lien</td>
+            </tr>
+            <tr>
+                <th>TEST2</th>
+                <td>lien</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+
 </html>
