--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Acceuil</title>
     <link href="https://bootswatch.com/5/superhero/bootstrap.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <link href="../static/css/style.css" rel="stylesheet">
 </head>
 
@@ -15,26 +16,38 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active nav2" href="#">Acceuil
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
-    <table style="background-color: blanchedalmond; color: black; border-radius: 10px; margin-left: 10%;margin-top: 5%;">
-        <thead>
-            <tr>
-                <th class="col-8">Identifiant</th>
-                <th class="col-4">Fiche Contact</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th><a href="http://google.fr">TEST</a></th>
-                <td>lien</td>
-            </tr>
-            <tr>
-                <th>TEST2</th>
-                <td>lien</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="col-sm-12">
+        <table class="tableauID " id="customers">
+            <thead>
+                <tr>
+                    <th>Identifiant</th>
+                    <th>Identifiant</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="fiche.html">TEST</a></td>
+                    <td><a href="fiche.html">TEST</a></td>
+                </tr>
+                <tr>
+                    <td>TEST2</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </body>
 
 </html>
