--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,13 +42,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>TEST</td>
-                    <td><a href="fiche.html">Voir la fiche</a></td>
-                </tr>
-                <tr>
-                    <td>TEST2</td>
-                </tr>
+            var_tableau
             </tbody>
         </table>
     </div>
