--- a/src/html/fiche.html
+++ b/src/html/fiche.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active nav2" href="index.html">Accueil
+                        <a class="nav-link  nav2" href="index.html">Acceuil
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
@@ -29,7 +29,7 @@
             </div>
         </div>
     </nav>
-    <div class="infoAgent">
+    <div class="">
         <div class="col-sm-12 Name">
             <h1>NOM Prénom</h1>
         </div>
@@ -37,15 +37,20 @@
             <img src="../static/img/logo.png" alt="imgProfil" class="imgProfil">
         </div>
         <div class="check">
-            <p>Listes des équipements :</p><br>
-            <p>equipement1</p>
-            <p>equipement2</p>
-            <p>equipement3</p>
-            <p>equipement4</p>
-            <p>equipement5</p>
-            <p>equipement6</p>
-            <p>equipement7</p>
-            <p>equipement8</p>
+            <input type="checkbox" id="Equipement1" name="Equipement1" value="True">
+            <label for="Equipement1"> Mousqueton </label><br>
+            <input type="checkbox" id="Equipement2" name="Equipement2" value="True">
+            <label for="Equipement2"> Gant d'intervention</label><br>
+            <input type="checkbox" id="Equipement3" name="Equipement3" value="True">
+            <label for="Equipement3"> Ceinture de sécurité tactique</label><br>
+            <input type="checkbox" id="Equipement4" name="Equipement4" value="True">
+            <label for="Equipement4"> Détecteur de métaux</label><br>
+            <input type="checkbox" id="Equipement5" name="Equipement5" value="True">
+            <label for="Equipement5"> Brassard de sécurité</label><br>
+            <input type="checkbox" id="Equipement6" name="Equipement6" value="True">
+            <label for="Equipement6"> Lampe torche</label><br>
+            <input type="checkbox" id="Equipement7" name="Equipement7" value="True">
+            <label for="Equipement7"> Gilet pare balle</label><br>
         </div>
     </div>
 </body>
