--- a/src/html/fiche.html
+++ b/src/html/fiche.html
@@ -18,41 +18,28 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-            <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link  nav2" href="index.html">Acceuil
-                            <span class="visually-hidden">(current)</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="">
-        <div class="col-sm-12 Name">
-            <h1>NOM Prénom</h1>
-        </div>
-        <div class="col-sm-12 imageProfil">
-            <img src="../static/img/logo.png" alt="imgProfil" class="imgProfil">
-        </div>
-        <div class="check">
-            <input type="checkbox" id="Equipement1" name="Equipement1" value="True">
-            <label for="Equipement1"> Mousqueton </label><br>
-            <input type="checkbox" id="Equipement2" name="Equipement2" value="True">
-            <label for="Equipement2"> Gant d'intervention</label><br>
-            <input type="checkbox" id="Equipement3" name="Equipement3" value="True">
-            <label for="Equipement3"> Ceinture de sécurité tactique</label><br>
-            <input type="checkbox" id="Equipement4" name="Equipement4" value="True">
-            <label for="Equipement4"> Détecteur de métaux</label><br>
-            <input type="checkbox" id="Equipement5" name="Equipement5" value="True">
-            <label for="Equipement5"> Brassard de sécurité</label><br>
-            <input type="checkbox" id="Equipement6" name="Equipement6" value="True">
-            <label for="Equipement6"> Lampe torche</label><br>
-            <input type="checkbox" id="Equipement7" name="Equipement7" value="True">
-            <label for="Equipement7"> Gilet pare balle</label><br>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link  nav2" href="new_index.html">Acceuil
+                        <span class="visually-hidden">(current)</span>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
+</nav>
+<div class="">
+    <div class="col-sm-12 Name">
+        var_nom
+        var_mission
+        var_password
+        var_materiel
+    </div>
+    <div class="col-sm-12 imageProfil">
+        <img src="../static/img/logo.png" alt="imgProfil" class="imgProfil">
+    </div>
+</div>
 </body>
 
 </html>
