--- a/src/html/fiche.html
+++ b/src/html/fiche.html
@@ -6,22 +6,23 @@
     <title>Fiche Client</title>
     <link href="https://bootswatch.com/5/superhero/bootstrap.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="../../static/css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-            <img src="../static/img/logo.png" alt="logo" class="logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <img src="../../static/img/logo.png" alt="logo" class="logo">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link  nav2" href="new_index.html">Acceuil
+                    <a class="nav-link  nav2" href="index.html">Accueil
                         <span class="visually-hidden">(current)</span>
                     </a>
                 </li>
@@ -37,7 +38,7 @@
         var_materiel
     </div>
     <div class="col-sm-12 imageProfil">
-        <img src="../static/img/logo.png" alt="imgProfil" class="imgProfil">
+        <img src="../../data_client/img/var_image" alt="imgProfil" class="imgProfil">
     </div>
 </div>
 </body>
