[IMP] upgrade webpage + creation webpage error

--- a/src/html/errorAgent.html
+++ b/src/html/errorAgent.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active nav2" href="index.html">Accueil
+                        <a class="nav-link active nav2 navError">Accueil
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
@@ -29,24 +29,9 @@
             </div>
         </div>
     </nav>
-    <div class="infoAgent">
-        <div class="col-sm-12 Name">
-            <h1>NOM Prénom</h1>
-        </div>
-        <div class="col-sm-12 imageProfil">
-            <img src="../static/img/logo.png" alt="imgProfil" class="imgProfil">
-        </div>
-        <div class="check">
-            <p>Listes des équipements :</p><br>
-            <p>equipement1</p>
-            <p>equipement2</p>
-            <p>equipement3</p>
-            <p>equipement4</p>
-            <p>equipement5</p>
-            <p>equipement6</p>
-            <p>equipement7</p>
-            <p>equipement8</p>
-        </div>
+    <div class="msgError">
+        <h1> Error</h1>
+        <p> message d'erreur : Error fiche d'agent </p>
     </div>
 </body>
 
