--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
-    <title>Acceuil</title>
+    <title>Accueil</title>
     <link href="https://bootswatch.com/5/superhero/bootstrap.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <link href="../static/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active nav2" href="#">Acceuil
+                        <a class="nav-link active nav2" href="#">Accueil
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
@@ -28,18 +29,22 @@
             </div>
         </div>
     </nav>
+    <div class="presentation">
+        <h1> Liste des agents</h1>
+        <p> Ici vous pouvez retrouver la liste de tous les agents et en cliquant sur le lien à disposition :</p>
+    </div>
     <div class="col-sm-12">
         <table class="tableauID " id="customers">
             <thead>
                 <tr>
                     <th>Identifiant</th>
-                    <th>Identifiant</th>
+                    <th>Fiche Agent</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="fiche.html">TEST</a></td>
-                    <td><a href="fiche.html">TEST</a></td>
+                    <td>TEST</td>
+                    <td><a href="fiche.html">Voir la fiche</a></td>
                 </tr>
                 <tr>
                     <td>TEST2</td>
